Move layer loading process inside object constructor

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -144,22 +144,22 @@
                                             exclusiveVisibility: [
                                                 {
                                                     layerId: "CleanAir",
-                                                    name: "Clean Air"
+                                                    name: "Clean Air in Set"
                                                 },
                                                 {
                                                     name: "Group in Set",
                                                     children: [
                                                         {
                                                             layerId: "CleanAir",
-                                                            name: "Clean Air"
+                                                            name: "Clean Air in Nested Group"
                                                         },
                                                         {
                                                             layerId: "WaterQuantity",
-                                                            name: "Water Quantity"
+                                                            name: "Water Quantity in Nested Group"
                                                         }
                                                     ]
                                                 }
-                                            ]       
+                                            ]
                                         }
                                     ]
                                 }
