build: abstract ramp-starter code
from the host/ and public/ index.html files into the "ramp-starter.js"
file

--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -28,230 +28,14 @@
         </noscript>
         <div id="app"></div>
 
+        <span id="ramp-version"></span>
+
         <script>
             function initRAMP() {
                 console.log('RAMP has loaded.');
             }
         </script>
 
-        <script>
-            let rInstance;
-
-            function initRAMP() {
-                rInstance = new RAMP.Instance(document.getElementById('app'), {
-                    map: {
-                        extent: {
-                            xmax: -5007771.626060756,
-                            xmin: -16632697.354854,
-                            ymax: 10015875.184845109,
-                            ymin: 5022907.964742964,
-                            spatialReference: {
-                                wkid: 102100,
-                                latestWkid: 3857
-                            }
-                        },
-                        lods: RAMP.geoapi.maps.defaultLODs(RAMP.geoapi.maps.defaultTileSchemas()[1]), // idx 1 = mercator
-                        basemaps: [
-                            {
-                                id: 'esriImagery',
-                                tileSchemaId: 'DEFAULT_ESRI_World_AuxMerc_3857',
-                                layers: [
-                                    {
-                                        layerType: 'esriTile',
-                                        url: 'http://services.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer'
-                                    }
-                                ]
-                            }
-                        ],
-                        initialBasemapId: 'esriImagery'
-                    },
-                    layers: [
-                        {
-                            id: 'WaterQuantity',
-                            layerType: 'esriMapImage',
-                            url: 'http://maps-cartes.ec.gc.ca/arcgis/rest/services/CESI/MapServer',
-                            layerEntries: [
-                                {
-                                    index: 1,
-                                    state: {
-                                        opacity: 1,
-                                        visibility: true
-                                    }
-                                }
-                            ],
-                            state: {
-                                opacity: 1,
-                                visibility: true
-                            },
-                            customRenderer: {} // just to chill things out. real ramp will have all properties defaulted and filled in
-                        },
-                        {
-                            id: 'CleanAir',
-                            layerType: 'esriFeature',
-                            url: 'http://maps-cartes.ec.gc.ca/arcgis/rest/services/EcoGeo/EcoGeo/MapServer/9',
-                            state: {
-                                opacity: 0.8,
-                                visibility: true
-                            },
-                            customRenderer: {} // just to chill things out. real ramp will have all properties defaulted and filled in
-                        },
-                        {
-                            id: 'HydrometricStations',
-                            layerType: 'ogcWfs',
-                            url: 'http://geo.wxod-dev.cmc.ec.gc.ca/geomet/features/collections/hydrometric-stations/items?startindex=7500',
-                            state: {
-                                visibility: true
-                            },
-                            customRenderer: {} // just to chill things out. real ramp will have all properties defaulted and filled in
-                        },
-                        {
-                            id: 'Happy',
-                            layerType: 'esriFeature',
-                            fileType: 'geojson',
-                            url: 'http://fgpv.cloudapp.net/demo/__assets__/Sample%20Data/happy.json',
-                            state: {
-                                visibility: true
-                            },
-                            customRenderer: {} // just to chill things out. real ramp will have all properties defaulted and filled in
-                        }
-                    ],
-                    fixtures: {
-                        appbar: {
-                            items: [
-                                { id: 'gazebo', options: { colour: '#54a0ff' } },
-                                'divider',
-                                'snowman-appbar-button',
-                                'legend',
-                                'geosearch',
-                                'basemap',
-                                'divider'
-                            ]
-                        },
-                        mapnav: { items: ['fullscreen', 'help', 'home', 'basemap'] },
-                        details: {
-                            items: [
-                                {
-                                    id: 'WaterQuantity',
-                                    template: 'Water-Quantity-Template'
-                                },
-                                {
-                                    id: 'WFSLayer',
-                                    template: 'WFSLayer-Custom'
-                                }
-                            ]
-                        }
-                    }
-                });
-
-                // Register some custom templates. I'm sure there's a way to add these from a separate file...
-
-                Vue.component('WFSLayer-Custom', {
-                    props: ['identifyData'],
-                    render: function(h) {
-                        return h('div', [
-                            h('span', 'This is an example template that contains an image.'),
-                            h('span', { 
-                                domProps: { innerHTML: '<img src="https://i.imgur.com/WtY0tdC.gif" />' }
-                            })
-                        ])
-                    }
-                })
-
-                Vue.component('Water-Quantity-Template', {
-                    props: ['identifyData'],
-                    render: function(h) {
-
-                        // Demonstrates that you can display different components in a template depending on an attribute value.
-                        let renderHeader = () => {
-                            if(this.identifyData.data['Symbol'] === "3") {
-                                return h('span', {
-                                    style: 'display: flex; font-size: 1.25rem; background-color: #e53e3e; color: white; padding: 4px; text-align: center;'
-                                }, this.identifyData.data['StationName']);
-                            } else {
-                                return h('span', {
-                                    style: 'display: flex; font-size: 1.25rem; background-color: #3182ce; color: white; padding: 4px; text-align: center;'
-                                }, this.identifyData.data['StationName']);
-                            }
-                        }
-
-                        let createSection = (title, id) => {
-                            return h('div', {
-                                style: 'display: flex; flex-direction: column; font-size: .875rem; padding-top: 5px;'
-                            }, [
-                                h('span', {
-                                    style: 'color: #a0aec0; font-weight: bold;'
-                                }, title),
-                                h('span', this.identifyData.data[id])
-                            ])
-                        }
-
-                        return h('div', { style: 'align-items: center; justify-content: center; font-size: .875rem; font-family: "Arial", sans-serif;' }, [
-                            renderHeader(),
-                            createSection('Station ID', 'StationID'),
-                            createSection('Province', 'E_Province'),
-                            createSection('Report Year', 'Report_Year'),
-                            h('div', {
-                                style: 'display: flex; flex-direction: row; color: #a0aec0; font-weight: bold; padding-top: 5px;'
-                            }, [
-                                h('div', {
-                                    style: 'flex: 1 1 0%; width: 100%;'
-                                }, 'Latitude'),
-                                h('div', {
-                                    style: 'flex: 1 1 0%; width: 100%;'
-                                }, 'Longitude')
-                            ]),
-                            h('div', {
-                                style: 'display: flex; flex-direction: row;'
-                            }, [
-                                h('div', {
-                                    style: 'flex: 1 1 0%; width: 100%;'
-                                }, this.identifyData.data['Latitude']),
-                                h('div', {
-                                    style: 'flex: 1 1 0%; width: 100%;'
-                                }, this.identifyData.data['Longitude'])
-                            ]),
-                            h('div', {
-                                style: 'display: flex; flex-direction: column; padding-top: 5px; color: #4299e1;'
-                            }, [
-                                h('span', {
-                                    style: 'font-weight: bold; color: #a0aec0;'
-                                }, 'Links'),
-                                h('span', {
-                                    domProps: {
-                                        innerHTML: this.identifyData.data['E_DetailPageURL']
-                                    }
-                                }),
-                                h('span', {
-                                    domProps: {
-                                        innerHTML: this.identifyData.data['E_URL_Historical']
-                                    }
-                                }),
-                                h('span', {
-                                    domProps: {
-                                        innerHTML: this.identifyData.data['E_URL_RealTime']
-                                    }
-                                })
-                            ])
-                        ]);
-                    }
-                });
-
-                // start loading fixtures; this is just an example
-
-                rInstance.fixture.add('appbar');
-                rInstance.fixture.add('mapnav');
-                rInstance.fixture.add('snowman');
-                rInstance.fixture.add('gazebo');
-                rInstance.fixture.add('geosearch');
-                rInstance.fixture.add('basemap');
-                rInstance.fixture.add('legend');
-                rInstance.fixture.add('grid');
-                rInstance.fixture.add('details');
-                rInstance.fixture.add('help');
-
-                rInstance.fixture.add('diligord', window.hostFixtures.diligord);
-                rInstance.fixture.add('mouruge', window.hostFixtures.mouruge);
-            }
-        </script>
+        <script src="./../dist/ramp-starter.js"></script>
     </body>
 </html>
