chore: async functions, comment cleanup

--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Fun Note: the `host` instance of index.html is what gets used when building the project via `rush build` -->
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
