--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Fun Note: the `public` instance of index.html is what gets used when running locally via `rush serve` -->
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
