--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -30,7 +30,7 @@
         <noscript>
             <strong>We're sorry but ramp-core doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
-        <button onclick="animateToggle()">Animations: {{//get on/off status}}</button>
+        <button id="animate-status" onclick="animateToggle()">Animate: on</button>
         <button onclick="switchLang()">Switch language</button><span id="instance-language"></span>
 
         <div id="app"></div>
