changed location of IE notif code

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -33,6 +33,8 @@
         <button id="animate-status" onclick="animateToggle()">Animate: on</button>
         <button onclick="switchLang()">Switch language</button><span id="instance-language"></span>
 
+        <div id="IE"></div>
+
         <div id="app"></div>
 
         <span id="ramp-version"></span>
