--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -34,6 +34,7 @@
 
         <span id="ramp-version"></span>
 
+        <script src="./../dist/alternate.js"></script>
         <script src="./../dist/ramp-starter.js"></script>
     </body>
 </html>
