--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -39,7 +39,7 @@
 
         <span id="ramp-version"></span>
         <!-- built files will be auto injected -->
-
+        <script src="./alternate.js"></script>
         <script src="./ramp-starter.js"></script>
     </body>
 </html>
