IE browser notification

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -32,12 +32,14 @@
         </noscript>
         <button id="animate-status" onclick="animateToggle()">Animate: on</button>
         <button onclick="switchLang()">Switch language</button><span id="instance-language"></span>
-
+        
+        <div id="IE"></div>
         <div id="app"></div>
 
         <span id="ramp-version"></span>
         <!-- built files will be auto injected -->
 
+        <script src="./alternate.js"></script>
         <script src="./ramp-starter.js"></script>
     </body>
 </html>
