--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -27,10 +27,12 @@
         <noscript>
             <strong>We're sorry but ramp-core doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
+        <div id="IE"></div>
         <div id="app"></div>
 
         <span id="ramp-version"></span>
 
+        <script src="./../dist/alternate.js"></script>
         <script src="./../dist/ramp-starter.js"></script>
     </body>
 </html>
