--- a/packages/ramp-core/host/index-e2e.html
+++ b/packages/ramp-core/host/index-e2e.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <link rel="icon" href="./favicon.ico" />
+        <link rel="icon" href="./favicon.svg" />
         <title>Test Page</title>
 
         <link rel="stylesheet" href="./../dist/RAMP.css" />
@@ -24,18 +24,19 @@
         <script>
             // get RAMP "starter" script from url param
             const params = new URLSearchParams(document.location.search);
-            let script = document.createElement("script");
-            let starterParam = params.get("script");
+            let script = document.createElement('script');
+            let starterParam = params.get('script');
             if (starterParam) {
                 // html-webpack-plugin doesn't like template strings
-                script.src = "./../dist/starter-scripts/" + starterParam + ".js";
+                script.src =
+                    './../dist/starter-scripts/' + starterParam + '.js';
             } else {
-                script.src = "./../dist/ramp-starter.js";
+                script.src = './../dist/ramp-starter.js';
             }
             // log an error msg if script doesn't exist / is broken
             script.onerror = () => {
-                console.log("invalid script");
-            }
+                console.log('invalid script');
+            };
             document.body.appendChild(script);
         </script>
     </body>
