--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <link rel="icon" href="./favicon.ico" />
+        <link rel="icon" href="./favicon.svg" />
         <title>ramp-core</title>
 
         <link rel="stylesheet" href="./../dist/RAMP.css" />
@@ -25,7 +25,10 @@
     </head>
     <body>
         <noscript>
-            <strong>We're sorry but ramp-core doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+            <strong
+                >We're sorry but ramp-core doesn't work properly without
+                JavaScript enabled. Please enable it to continue.</strong
+            >
         </noscript>
         <div id="IE"></div>
         <div id="app"></div>
