--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+        <link rel="icon" href="<%= BASE_URL %>favicon.svg" />
         <title>ramp-core</title>
 
         <!-- Vue is loaded in dev builds as well because of an issue with Cypress and external fixtures -->
@@ -28,10 +28,16 @@
         </style>
 
         <noscript>
-            <strong>We're sorry but ramp-core doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+            <strong
+                >We're sorry but ramp-core doesn't work properly without
+                JavaScript enabled. Please enable it to continue.</strong
+            >
         </noscript>
-        <button id="animate-status" onclick="animateToggle()">Animate: on</button>
-        <button onclick="switchLang()">Switch language</button><span id="instance-language"></span>
+        <button id="animate-status" onclick="animateToggle()">
+            Animate: on
+        </button>
+        <button onclick="switchLang()">Switch language</button
+        ><span id="instance-language"></span>
 
         <div id="IE"></div>
         <div id="app"></div>
