clean up sample pages and add basemap copyright fetching

--- a/packages/ramp-core/host/index-e2e.html
+++ b/packages/ramp-core/host/index-e2e.html
@@ -23,10 +23,8 @@
         <!-- loading main RAMP file; this needs to be loaded after Vue -->
         <script src="./../dist/RAMP.umd.js"></script>
     </head>
-    <body>
+    <body style="margin: 0;">
         <div id="app"></div>
-
-        <span id="ramp-version"></span>
 
         <script>
             // get RAMP "starter" script from url param
