--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -16,7 +16,7 @@
         <!-- loading main RAMP file; this needs to be loaded after Vue -->
         <script src="./../dist/RAMP.umd.js"></script>
     </head>
-    <body>
+    <body style="margin: 0;">
         <noscript>
             <strong
                 >We're sorry but ramp-core doesn't work properly without
@@ -25,8 +25,6 @@
         </noscript>
         <div id="IE"></div>
         <div id="app"></div>
-
-        <span id="ramp-version"></span>
 
         <script src="./../dist/alternate.js"></script>
         <script src="./../dist/ramp-starter.js"></script>
