--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -13,7 +13,7 @@
 
         <!-- RAMP will be injected here -->
     </head>
-    <body>
+    <body style="margin: 0;">
         <style>
             #instance-language {
                 margin-left: 20px;
@@ -26,16 +26,10 @@
                 JavaScript enabled. Please enable it to continue.</strong
             >
         </noscript>
-        <button id="animate-status" onclick="animateToggle()">
-            Animate: on
-        </button>
-        <button onclick="switchLang()">Switch language</button
-        ><span id="instance-language"></span>
 
         <div id="IE"></div>
         <div id="app"></div>
 
-        <span id="ramp-version"></span>
         <!-- built files will be auto injected -->
 
         <script src="./alternate.js"></script>
