build: publish to GitHub pages instead of Azure blob

--- a/demos/index.html
+++ b/demos/index.html
@@ -26,6 +26,7 @@
 
         <div id="IE"></div>
         <div id="app"></div>
+        <script src="./lib/ramp.global.js"></script>
 
         <script type="module" src="./starter-scripts/main.js"></script>
     </body>
