--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
 
         <div id="IE"></div>
         <div id="app"></div>
-        <script src="./lib/ramp.iife.js"></script>
+        <script src="./lib/ramp.global.js"></script>
 
-        <script type="module" src="./starter-scripts/main.js"></script>
+        <script type="module" src="./starter-scripts/index.js"></script>
     </body>
 </html>
