--- a/public/samples/index.html
+++ b/public/samples/index.html
@@ -26,9 +26,39 @@
         </noscript>
 
         <div id="IE"></div>
-        <div id="app"></div>
-        <script src="./lib/ramp.iife.js"></script>
+        <div id="main-container">
+            <div id="container1">
+                <h1 class="ramp-heading">RAMP Instance 1</h1>
+                <div id="app1"></div>
+            </div>
 
+            <div id="container2">
+                <h1 class="ramp-heading">RAMP Instance 2</h1>
+                <div id="app2"></div>
+            </div>
+        </div>
+        <script src="./lib/ramp.iife.js"></script>
         <script type="module" src="./starter-scripts/main.js"></script>
+        <style>
+            #main-container {
+                display: flex;
+            }
+            .ramp-heading {
+                font-size: 28pt;
+                text-align: center;
+                font-weight: bolder;
+            }
+            #container1 {
+                width: 45vw;
+                height: 500px;
+                background-color: crimson;
+            }
+            #container2 {
+                width: 45vw;
+                margin-left: 5px;
+                height: 500px;
+                background-color: blue;
+            }
+        </style>
     </body>
 </html>
