--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <noscript>
             <strong
                 >We're sorry but ramp-core doesn't work properly without
-                JavaScript enabled. Please enable it to continue.</strong
+                JavaScript enabled. Please enable it to continue. TYTY</strong
             >
         </noscript>
 
