--- a/demos/index-multi.html
+++ b/demos/index-multi.html
@@ -25,8 +25,12 @@
         </noscript>
 
         <div id="IE"></div>
-        <div id="app" style="height: 100vh"></div>
+        <div id="top-row" style="display: flex; height: 50vh">
+            <div id="app" style="flex-grow: 1"></div>
+            <div id="app2" style="width: 390px"></div>
+        </div>
+        <div id="app3" style="height: 50vh"></div>
 
-        <script type="module" src="./starter-scripts/main.js"></script>
+        <script type="module" src="./starter-scripts/multi-ramp.js"></script>
     </body>
 </html>
