fix app div height in public index.html

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         </noscript>
 
         <div id="IE"></div>
-        <div id="app"></div>
+        <div id="app" style="height: 100vh"></div>
         <script src="./lib/ramp.global.js"></script>
         <script type="module" src="./starter-scripts/index.js"></script>
     </body>
