--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,11 @@
         </noscript>
 
         <div id="IE"></div>
-        <div id="app" style="height: 100vh"></div>
+        <div id="top-row" style="display: flex; height: 50vh">
+            <div id="app" style="flex-grow: 1"></div>
+            <div id="app2" style="width: 390px"></div>
+        </div>
+        <div id="app3" style="height: 50vh"></div>
         <script src="./lib/ramp.global.js"></script>
         <script type="module" src="./starter-scripts/index.js"></script>
     </body>
