fix blank legend bug

--- a/demos/index-wet.html
+++ b/demos/index-wet.html
@@ -352,7 +352,7 @@
                 });
             </script>
 
-            <script type="module" src="./starter-scripts/main.js"></script>
+            <script type="module" src="./starter-scripts/wet.js"></script>
         </main>
 
         <div id="def-footer">
