css tweaks for panels, viewport

--- a/demos/index.html
+++ b/demos/index.html
@@ -21,7 +21,10 @@
         </noscript>
 
         <div id="IE"></div>
-        <div id="app" style="height: 100vh"></div>
+        <div
+            id="app"
+            style="height: 100vh; max-height: -webkit-fill-available"
+        ></div>
 
         <script type="module" src="./starter-scripts/main.js"></script>
     </body>
