--- a/public/index-cesi.html
+++ b/public/index-cesi.html
@@ -22,7 +22,10 @@
         </noscript>
 
         <div id="IE"></div>
-        <div id="app" style="height: 100vh"></div>
+        <div
+            id="app"
+            style="height: 100vh; max-height: -webkit-fill-available"
+        ></div>
         <script src="./lib/ramp.global.js"></script>
         <script type="module" src="./starter-scripts/cesi.js"></script>
     </body>
