--- a/demos/index-e2e.html
+++ b/demos/index-e2e.html
@@ -21,7 +21,10 @@
         </noscript>
 
         <div id="IE"></div>
-        <div id="app" style="height: 100vh"></div>
+        <div
+            id="app"
+            style="height: 100vh; max-height: -webkit-fill-available"
+        ></div>
 
         <script>
             // get RAMP "starter" script from url param
