External fixtures fix

--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -20,11 +20,14 @@
                     <option value="custom-overviewmap">
                         08. Custom Overview Map
                     </option>
-                    <option value="custom-arrow">09. Custom North Arrow</option>
-                    <option value="grid">10. Grid</option>
-                    <option value="geosearch">11. Geosearch</option>
-                    <option value="help">12. Help</option>
-                    <option value="mapnav">13. Mapnav</option>
+                    <option value="custom-appbar-button">
+                        09. Custom Appbar Button
+                    </option>
+                    <option value="custom-arrow">10. Custom North Arrow</option>
+                    <option value="grid">11. Grid</option>
+                    <option value="geosearch">12. Geosearch</option>
+                    <option value="help">13. Help</option>
+                    <option value="mapnav">14. Mapnav</option>
                 </select>
             </div>
         </section>
