--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -9,7 +9,7 @@
     <body style="margin: 0">
         <section id="header" style="width: 100%">
             <div class="row">
-                <!-- 
+                <!--
                     PAY ATTENTION! :'0  The order of these options is hard-linked to the
                     direct load url parameter. So page.html?sample=4 will take the fourth
                     option, not option "04. ". Unless the list order is maintained impeccably.
@@ -39,6 +39,9 @@
                     </option>
                     <option value="simple-mil">
                         16. Basic Map with Map Image Layers
+                    </option>
+                    <option value="r2-config-upgraded">
+                        17. RAMP 2 config upgraded
                     </option></select
                 ><a class="linky" href="index-all.html">Catalogue</a>
             </div>
