Error sample, other minor tweaks

--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -42,8 +42,12 @@
                     </option>
                     <option value="r2-config-upgraded">
                         17. RAMP 2 config upgraded
-                    </option></select
-                ><a class="linky" href="index-all.html">Catalogue</a>
+                    </option>
+                    <option value="error-layers">
+                        18. Layers in error state
+                    </option>
+                </select>
+                <a class="linky" href="index-all.html">Catalogue</a>
             </div>
         </section>
 
