Legend tree grow

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -118,6 +118,13 @@
                 with a customized datatable.
                 <span class="tag misc">Datatable</span>
             </li>
+            <li>
+                30.
+                <a href="index-samples.html?sample=30"
+                    >Map Image Layers with groups</a
+                >. Map image layers with groups specified in the config.
+                <span class="tag layer">Map Image Layer</span>
+            </li>
         </ul>
 
         Samples 5 to 14 to be added!.
