--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -74,6 +74,9 @@
                     <option value="grid-config">
                         29. Layer with configured datatable
                     </option>
+                    <option value="tree-grow">
+                        30. Map Image Layers with groups
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
