ramp2 -> ramp4 samples

--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -46,8 +46,17 @@
                     <option value="error-layers">
                         18. Layers in error state
                     </option>
-                </select>
-                <a class="linky" href="index-all.html">Catalogue</a>
+                    <option value="disabled-options">
+                        19. Layers with disabled options
+                    </option>
+                    <option value="layer-metadata">
+                        20. Layer with metadata
+                    </option>
+                    <option value="section-item">21. Section Items</option>
+                    <option value="info-section">
+                        22. Info Sections
+                    </option></select
+                ><a class="linky" href="index-all.html">Catalogue</a>
             </div>
         </section>
 
