--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -75,6 +75,30 @@
                 <a href="index-samples.html?sample=18">Layers in error state</a
                 >. The main sample, but with some of the layers in error state.
             </li>
+            <li>
+                19.
+                <a href="index-samples.html?sample=19"
+                    >Layers with disabled options</a
+                >. Layers with various options (datatable, settings, etc.)
+                disabled.
+                <span class="tag layer">Feature Layer</span>
+                <span class="tag layer">Points</span>
+            </li>
+            <li>
+                20.
+                <a href="index-samples.html?sample=20">Layer with metadata</a>.
+                A layer with metadata.
+                <span class="tag layer">Feature Layer</span>
+                <span class="tag layer">Points</span>
+            </li>
+            <li>
+                21.
+                <a href="index-samples.html?sample=21">Section Items</a>. Legend
+                section items with different settings (exclusive, hidden, etc.).
+                <span class="tag legend">Exclusive Set</span>
+                <span class="tag layer">Feature Layer</span>
+                <span class="tag layer">Points</span>
+            </li>
         </ul>
 
         Samples 5 to 14 to be added!.
@@ -94,6 +118,12 @@
                 map image layer with two children.
                 <span class="tag layer">Map Image Layer</span
                 ><span class="tag layer">Points</span>
+            </li>
+            <li>
+                22.
+                <a href="index-samples.html?sample=22">Info Sections</a>. All
+                basic info section types
+                <span class="tag legend">Info Sections</span>
             </li>
         </ul>
     </body>
