More samples, other small enhancements

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -101,8 +101,16 @@
             </li>
             <li>
                 26.
-                <a href="index-samples?sample=26">Fog Hilighter</a>. A
+                <a href="index-samples.html?sample=26">Fog Hilighter</a>. A
                 demonstration of feature highlighting with the fog hilighter.
+                <span class="tag misc">Feature Highlighting</span>
+            </li>
+            <li>
+                28.
+                <a href="index-samples.html?sample=28">
+                    Layers with exclusive fields enabled </a
+                >. Layers with with a subset of their fields specified in the
+                config.
             </li>
         </ul>
 
@@ -129,6 +137,12 @@
                 <a href="index-samples.html?sample=22">Info Sections</a>. All
                 basic info section types
                 <span class="tag legend">Info Sections</span>
+            </li>
+            <li>
+                27.
+                <a href="index-samples.html?sample=27">File Layers</a>. One CSV
+                layer, one shapefile layer, and one GeoJson layer.
+                <span class="tag layer">File Layers</span>
             </li>
         </ul>
 
