--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -65,6 +65,12 @@
                     <option value="fog-hilight">
                         26. Feature Highlighting with Fog Hilighter
                     </option>
+                    <option value="simple-file">
+                        27. Basic Map with File Layers
+                    </option>
+                    <option value="exclusive-fields">
+                        28. Layers with exclusive fields
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
